add_library(my_queue INTERFACE my_queue.hh)
add_library(print_utilities print_utilities.hh print_utilities.cc)
add_library(maze_utilities maze_utilities.hh maze_utilities.cc)
add_library(solver_utilities solver_utilities.hh solver_utilities.cc)
add_library(disjoint_set disjoint_set.hh disjoint_set.cc)
add_library(maze maze.hh maze.cc)
